if(BUILD_MARBLE_APPS)
    if (NOT ANDROID)
        add_subdirectory(marble-ui)
        if (BUILD_QT_AND_KDE)
            add_subdirectory(marble-kde)
            add_subdirectory(marble-qt)
        elseif (TARGET KF6::Parts)
            add_subdirectory(marble-kde)
        else()
            add_subdirectory(marble-qt)
        endif()
    endif()

    add_subdirectory(behaim)
    add_subdirectory(marble-maps)
endif()
